--- a/.github/workflows/release-caller.yml
+++ b/.github/workflows/release-caller.yml
@@ -14,3 +14,4 @@ jobs:
     uses: ac-clash/workflows/.github/workflows/release-called.yml@main
     secrets:
       token: ${{ secrets.TOKEN }}
+      passwd: ${{ secrets.PASSWD }}
